--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     ],
     "license": "MIT",
     "require": {
+        "silex/silex": "~1.1",
         "php": "^7.2.5|^8.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
@@ -62,4 +63,5 @@
             "@php artisan key:generate --ansi"
         ]
     }
+    
 }
